# Wirekrak

./: .gitignore  .swp  CMakeLists.txt  CMakePresets.json  INSTALL_DEPENDENCIES.md  LICENSE  README.md
benchmark/transport/: CMakeLists.txt
benchmarks/: CMakeLists.txt
benchmarks/core/: CMakeLists.txt
benchmarks/core/protocol/: CMakeLists.txt
benchmarks/core/protocol/kraken/: CMakeLists.txt  book_latency_btc_usd.cpp  book_latency_usual_usd.cpp  full_exchange_ingestion.cpp  multi_subscription.cpp  single_book_subscription.cpp
benchmarks/core/transport/: CMakeLists.txt  websocket_throughput.cpp
benchmarks/lcr/: CMakeLists.txt
benchmarks/lcr/buffer/: CMakeLists.txt  managed_spsc_ring_minimal.cpp  managed_spsc_ring_minimal_ts.cpp  managed_spsc_ring_realistic.cpp  managed_spsc_ring_workload.cpp
benchmarks/lcr/lockfree/: CMakeLists.txt  spsc_compare.cpp  spsc_compare_heap.cpp  spsc_compare_heap_batched.cpp  spsc_compare_stack.cpp  spsc_find_batch_size.cpp  spsc_queue.cpp  spsc_ring.cpp
benchmarks/transport/: CMakeLists.txt  websocket_throughput.cpp  winhttp_websocket_throughput.cpp
examples/: CMakeLists.txt  README.md  book_requests.cpp  book_update_single.cpp  book_updates.cpp  connect.cpp  minimal_for_book_requests.cpp  minimal_for_book_updates.cpp  minimal_for_trade_requests.cpp  minimal_for_trades.cpp  ping_pong.cpp  reconnect.cpp  trade_multi.cpp  trade_requests.cpp  trade_single.cpp  trade_with_snapshot.cpp  trades.cpp
examples/common/: book_clip.hpp  kraken_pairs.hpp  logger.hpp
examples/common/cli/: book.hpp  book_params.hpp  minimal.hpp  symbol.hpp  trade.hpp  trade_params.hpp  validators.hpp
examples/common/loop/: helpers.hpp
examples/core/: CMakeLists.txt  README.md  book_requests.cpp  book_requests_minimal.cpp  book_subscription.cpp  minimal_book_subscription.cpp  minimal_trade_subscription.cpp  ping_pong.cpp  trade_requests.cpp  trade_requests_minimal.cpp  trade_subscription.cpp
examples/core/contracts/: CMakeLists.txt  Examples.md
examples/core/contracts/00_visibility/: CMakeLists.txt  kraken_book.cpp  kraken_book.md  kraken_liveness_timeout.cpp  kraken_trade.cpp  kraken_trade.md
examples/core/contracts/01_responsability/: CMakeLists.txt  kraken_book.cpp  kraken_book_cli.cpp  kraken_book_cli.md  kraken_trade.cpp  kraken_trade_cli.cpp  kraken_trade_cli.md
examples/core/contracts/02_enforcement/: CMakeLists.txt  kraken_liveness.cpp  kraken_liveness.md  kraken_ping_pong.cpp  kraken_ping_pong.md  kraken_replay.cpp  kraken_replay.md  kraken_subscription_ack.cpp  kraken_subscription_ack.md
examples/core/contracts/03_failure/: CMakeLists.txt  kraken_rejection.cpp  kraken_rejection.md
examples/core/contracts/04_policies/: CMakeLists.txt  kraken_backpressure_custom.cpp  kraken_backpressure_relaxed.cpp  kraken_backpressure_strict.cpp  kraken_backpressure_zero_tolerance.cpp  kraken_liveness_disabled.cpp  kraken_liveness_disabled_and_active.cpp  kraken_liveness_enabled_and_active.cpp  kraken_liveness_enabled_and_passive.cpp  kraken_relaxed_backpressure.cpp  kraken_replay_disabled.cpp  kraken_replay_enabled.cpp  kraken_request_batch.cpp  kraken_request_immediate.cpp  kraken_request_paced.cpp  kraken_retry_disabled.cpp  kraken_retry_enabled.cpp  kraken_strict_backpressure.cpp  kraken_symbol_limit_hard_enforcement.cpp  kraken_zero_tolerance_backpressure.cpp
examples/core/protocol/: CMakeLists.txt
examples/core/protocol/kraken/: CMakeLists.txt  minimal_book_subscription.cpp  trade_subscription.cpp
examples/core/transport/: CMakeLists.txt  Overview.md  README.md
examples/core/transport/connection/: CMakeLists.txt  Examples.md
examples/core/transport/websocket/: CMakeLists.txt
examples/core/transport/winhttp/: book_snapshot_subscription.cpp  trade_update_subscription.cpp
examples/experimental/: CMakeLists.txt
examples/experimental/include/flashstrike/: types.hpp  wal.hpp
examples/experimental/matching_engine/: CMakeLists.txt  external_integration.cpp  flashstrike_instrument_engine_gateway.cpp  flashstrike_matching_gateway.cpp  instrument_gateway.cpp  wireflash_matching_gateway.cpp
examples/lite/: CMakeLists.txt  README.md  book_subscription.cpp  minimal_book_subscription.cpp  minimal_trade_subscription.cpp  trade_requests.cpp  trade_requests_minimal.cpp  trade_subscription.cpp
examples/lite/00_quickstart/: CMakeLists.txt  README.md  book.cpp  trade.cpp
examples/lite/01_subscriptions/: CMakeLists.txt  README.md  book.cpp  book_cli.cpp  trade.cpp  trade_cli.cpp
examples/lite/02_multistream/: CMakeLists.txt  README.md  trades_and_book.cpp
examples/lite/03_lifecycle/: CMakeLists.txt  README.md  graceful_exit.cpp
examples/transport/winhttp/: book_snapshot_subscription.cpp  connect.cpp  trade_update_subscription.cpp
examples/winhttp/: connect.cpp  trade_multi.cpp  trade_single.cpp
experimental/: CMakeLists.txt
experimental/include/flashstrike/: constants.hpp  events.hpp  globals.hpp
experimental/include/flashstrike/exchange/: node.hpp
experimental/include/flashstrike/instrument/: engine.hpp
experimental/include/flashstrike/matching_engine/: order_pool.hpp  price_level_store.hpp  telemetry.hpp
experimental/include/flashstrike/wal/: constants.hpp
experimental/matching_engine/: CMakeLists.txt  flashstrike_matching_gateway.cpp
integrations/: CMakeLists.txt
integrations/include/flashstrike/event/: request.hpp
integrations/include/flashstrike/exchange/: cluster.hpp
integrations/include/flashstrike/instrument/: engine.hpp  (+1 more)
integrations/matching_engine/: CMakeLists.txt  flashstrike_matching_gateway.cpp
integrations/order_book/: CMakeLists.txt  flashstrike_order_book_gateway.cpp
src/lite/: CMakeLists.txt  enums.cpp
src/lite/domain/: book_level.cpp  trade.cpp
src/lite/dto/: book_level.cpp  trade.cpp
src/lite/kraken/: client.cpp
tests/protocol/: CMakeLists.txt  test_liveness_detection.cpp
tests/protocol/kraken/: CMakeLists.txt  test_channel_traits.cpp  test_kraken_client.cpp
tests/wal/recorder/: CMakeLists.txt  test_Controller.cpp
tests/winhttp/: CMakeLists.txt  test_websocket_transport.cpp
(+738 files in other folders)
