cmake_minimum_required(VERSION 3.25)

# Examples are not part of the main library
# They are standalone executables


# -------------------------------------------------------------
# Add core & lite examples
# -------------------------------------------------------------
add_subdirectory(core)
add_subdirectory(lite)
