# examples/core/contracts/CMakeLists.txt


# -------------------------------------------------------------
# Add example dirs
# -------------------------------------------------------------
add_subdirectory(00_visibility)
add_subdirectory(01_responsability)
add_subdirectory(02_enforcement)
add_subdirectory(03_failure)
add_subdirectory(04_policies)
