# examples/core/transport/connection/CMakeLists.txt


# -------------------------------------------------------------
# Add example dirs
# -------------------------------------------------------------
add_subdirectory(0_minimal)
add_subdirectory(1_fragmentation)
add_subdirectory(2_delivery)
add_subdirectory(3_lifecycle)
add_subdirectory(4_liveness)
