# examples/core/transport/connection/CMakeLists.txt


# -------------------------------------------------------------
# Add example dirs
# -------------------------------------------------------------
add_subdirectory(00_minimal)
add_subdirectory(01_fragmentation)
add_subdirectory(02_delivery)
add_subdirectory(03_lifecycle)
add_subdirectory(04_liveness)
